--- a/CSS/style.css
+++ b/CSS/style.css
@@ -78,6 +78,74 @@ img {
     display: none;
 }
 
+.banner {
+    width: 100%;
+    position: relative;
+}
+
+.banner-position {
+    width: 100%;
+    height: 37.5em;
+    /* background-color: rgba(0, 0, 255, 0.164); */
+    position: absolute;
+    top: 0;
+
+}
+
+.banner-content {
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: flex-end;
+    /* background-color: rgba(222, 184, 135, 0.39); */
+}
+
+.banner-text {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    padding-left: 100px;
+}
+
+.banner-text h1 {
+    font-size: 3.8em;
+}
+
+.banner-text span {
+    text-transform: uppercase;
+}
+
+.banner-text p {
+    font-size: 1.5em;
+}
+
+.banner-text a {
+    font-size: 1.87em;
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+    background-color: var( --red );
+    padding: 0.5em 1em;
+    border-radius: 0.5em;
+    margin-top: 1em;
+}
+
+.jogos {
+    width: 100%;
+    height: 7.5em;
+    /* background-color: aliceblue; */
+}
+
+.jogos ul {
+    list-style-type: none;
+    width: 100%;
+}
+
 @media screen and (max-width: 74.93empx) {
 
 }
