--- a/CSS/style.css
+++ b/CSS/style.css
@@ -80,7 +80,6 @@ img {
 
 .banner {
     width: 100%;
-    position: relative;
 }
 
 .banner-position {
@@ -144,6 +143,60 @@ img {
 .jogos ul {
     list-style-type: none;
     width: 100%;
+}
+
+.jogos ul a:hover img {
+    transition: 0.5s;
+    transform: scale(1.1);
+}
+
+.about {
+    width: 100%;
+    height: 31.25em;
+    background-color: var( --blue );
+    position: relative;
+}
+
+.about-angulation {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.angulation {
+    width: 100%;
+    height: 25em;
+    background-color: #000;
+    transform: skewY(-3deg);
+}
+
+.about-position {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+
+.about-text {
+    width: 50%;
+    color: #fff;
+    text-align: justify;
+}
+
+.about-text h2 {
+    font-size: 2.18rem;
+    margin-bottom: 0.5em;
+    
+}
+
+.about-text p {
+    font-size: 1.12em;
+    margin-bottom: 1em;
+}
+
+.about-position img {
+    max-width: 31.87em;
 }
 
 @media screen and (max-width: 74.93empx) {
