--- a/CSS/style.css
+++ b/CSS/style.css
@@ -203,24 +203,24 @@ img {
     max-width: 31.87em;
 }
 
-.jogos-aovivo, .jogos-embreve{
+.jogos-aovivo, .jogos-embreve {
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     font-size: 1.575em;
 }
 
-.jogos-aovivo h2, .jogos-embreve h2{
+.jogos-aovivo h2, .jogos-embreve h2 {
     font-size: 1.2em;
     text-transform: uppercase;
 }
 
-.linha{
+.linha {
     
     height: 3em;
     border:solid 1px #fff;
 }
 
-.partida{
+.partida {
     width: 9.5em;
     display: flex;
     justify-content: space-around;
@@ -238,12 +238,97 @@ img {
     font-weight: 400;
 }
 
-.time1 img{
+.time1 img {
     margin-left: 0.5em;
 }
 
-.time2 img{
+.time2 img {
     margin-right: 0.5em;
+}
+
+.bg-noticias {
+    width: 100%;
+    height: auto;
+    background-color: var(--black1);
+}
+
+.noticias {
+    width: 73%;
+    height: 90%;
+}
+
+.noticias h2, .proximos-jogos h2 {
+    color: #fff;
+    margin: 0.5em 0;
+    font-size: 2.1875em;
+    text-transform: uppercase;
+}
+
+.proximos-jogos {
+    width: 25%;
+    height:auto;
+}
+.newscard {
+    width: 100%;
+    max-width: 15em;
+    height: 23.125em;
+    background: var(--gradient);
+    color: #fff;
+    margin-bottom: 1.5em;
+    box-shadow: 0px 0px 15px rgb(59, 59, 59);
+}
+.noticias h3 {
+    padding: 0.5em;
+    text-transform: uppercase;
+}
+.noticias p {
+    padding: 0em 0.7em;
+}
+
+.wrap {
+    flex-wrap: wrap;
+} 
+.proximas-partidas {
+    background: var(--gradient);
+    height: 750px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+
+}
+.game {
+    width: 90%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color:#fff;
+}
+
+.times {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.times div {
+    display: flex;
+    align-items: center;
+}
+
+.times p {
+    font-size: 1.25em;
+    font-family: 'Roboto';
+}
+
+.times > p {
+    margin: 0 1em;
+}
+
+.times img {
+    width: 2.5em;
 }
 
 @media screen and (max-width: 74.93empx) {
